# finance-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  upgrade.sh
conf.d/: config-template.yml
docs/: plan-1.md  plan-2.md  plan-3.md  plan-4.md
docs/note/: note-1.md  note-2.md  note-3.md  note-4.md  note-5.md
docs/plans/: plan-4.md  plan-5.md
docs/stock_list/: stock_list_1.md  stock_list_2.md
finance_bot/: constants.py
finance_bot/backtest/: backtest_for_single_ticker.py
finance_bot/bot/: base.py
finance_bot/cmd/: __init__.py  cli.py  crypto_loan.py  data_sync.py  lending.py  remote.py  schedule.py  server.py  super_bot.py  tw_stock_backtest.py  tw_stock_data_sync.py  tw_stock_trade.py  us_stock_data_sync.py
finance_bot/config/: __init__.py
finance_bot/core/: __init__.py  base.py  exception.py
finance_bot/infrastructure/: __init__.py  api_manager.py  base.py  database_cache_manager.py  database_manager.py  infrastructure.py  notifier_manager.py  path_manager.py  schedule_manager.py  time_manager.py
finance_bot/lending/: lending_bot.py
finance_bot/model/: __init__.py  setting_control.py  setting_crypto_loan.py  wallet.py  (+15 more)
lab/: backtest_for_single_ticker.ipynb  backtester.py  backtester_for_single_stock.py  export_data_to_multicharts.py  lab_price.ipynb  lab_template.ipynb  month_revenue_crawler.ipynb  price_crawler.ipynb  sinioaji_simluation.ipynb  statements_crawler.ipynb  transform_1_k_line_to_x_k_line.ipynb  tw_stock_crawler.ipynb  tw_stock_price.ipynb  updater.ipynb
multicharts/: strategy_picker.ipynb  strategy_picker.py  strategy_selector.ipynb  加密1.wsp  幣安(研究).wsp  幣安.wsp  期貨(研究).wsp  期貨.pws  期貨.wsp  期貨1.wsp  研究.wsp  資料搜集.wsp
tool/: export_data_to_multicharts.py  export_stock_list_to_multicharts.py  export_stock_list_to_tw_stock_tag.py
tools/: export_data_to_multicharts.py
web/: Dockerfile  next-i18next.config.js  next-sitemap.config.js  next.config.js  package-lock.json  package.json
(+1606 files in other folders)
