[tool.poetry]
name = "finance-bot"
version = "0.1.0"
description = "兩大類專用理財小工具"
authors = ["兩大類 <marco79423@gmail.com>"]
readme = "README.md"
packages = [{ include = "finance_bot" }]

[tool.poetry.scripts]
finb = "finance_bot.cmd:cli"

[tool.poetry.dependencies]
python = "^3.10"
finlab = "^0.4.4"
omegaconf = "^2.3.0"
SQLAlchemy = "^2.0.16"
APScheduler = "^3.10.1"
pandas = "^2.0.2"
requests = "^2.31.0"
numpy = "^1.25.0"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
python-telegram-bot = "^20.3"
pydantic = "^1.10.9"
click = "^8.1.3"
finmind = "^1.6.0"
matplotlib = "^3.7.1"
pymysql = "^1.1.0"
bitfinex-api-py = "^2.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
